@@ -2,13 +2,14 @@ package my.notinhas.project.services.impl;
 
 import lombok.AllArgsConstructor;
 import my.notinhas.project.dtos.PostDTO;
-import my.notinhas.project.dtos.UserDTO;
 import my.notinhas.project.dtos.request.PostRequestDTO;
 import my.notinhas.project.dtos.response.PostPublicResponseDTO;
 import my.notinhas.project.dtos.response.PostResponseDTO;
 import my.notinhas.project.entities.Posts;
 import my.notinhas.project.entities.Users;
+import my.notinhas.project.enums.Value;
 import my.notinhas.project.exception.runtime.ObjectNotFoundException;
+import my.notinhas.project.repositories.LikeRepository;
 import my.notinhas.project.repositories.PostRepository;
 import my.notinhas.project.services.PostService;
 import org.modelmapper.Conditions;
@@ -18,37 +19,51 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
+import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
 public class PostServiceImpl implements PostService {
 
-    private final PostRepository repository;
+    private final PostRepository postRepository;
+    private final LikeRepository likeRepository;
     private final ModelMapper mapper;
 
     @Override
     public Page<PostPublicResponseDTO> findAllPublic(Pageable pageable) {
-        Page<Posts> posts = this.repository.findAll(pageable);
 
-        List<PostPublicResponseDTO> postPublicResponseDTO = posts.stream()
-                .map(post -> mapper.map(post, PostPublicResponseDTO.class))
-                .collect(Collectors.toList());
+        Page<Posts> posts = this.postRepository.findAllByActiveTrue(pageable);
 
-        return new PageImpl<>(postPublicResponseDTO, pageable, posts.getTotalElements());
+        List<PostPublicResponseDTO> postResponseDTO = posts.stream()
+                .map(post -> {
+                    verifyDateActive(post);
+
+                    return mapper.map(post, PostPublicResponseDTO.class);
+                })
+                .toList();
+
+        return new PageImpl<>(postResponseDTO, pageable, posts.getTotalElements());
     }
 
     @Override
     public Page<PostResponseDTO> findAll(Pageable pageable) {
 
-        Page<Posts> posts = this.repository.findAll(pageable);
+        Page<Posts> posts = this.postRepository.findAllByActiveTrue(pageable);
 
         List<PostResponseDTO> postResponseDTO = posts.stream()
-                .map(post -> mapper.map(post, PostResponseDTO.class))
-                .collect(Collectors.toList());
+                .map(post -> {
+                    verifyDateActive(post);
+
+                    PostResponseDTO dto = mapper.map(post, PostResponseDTO.class);
+
+                    dto.setTotalLikes(this.calculeTotalLike(post.getId()));
+
+                    return dto;
+                })
+                .toList();
 
         return new PageImpl<>(postResponseDTO, pageable, posts.getTotalElements());
     }
@@ -56,7 +71,7 @@ public class PostServiceImpl implements PostService {
     @Override
     public PostResponseDTO findByID(Long id) {
 
-        Posts post = this.repository.findById(id)
+        Posts post = this.postRepository.findById(id)
                 .orElseThrow(() -> new ObjectNotFoundException("Post with ID " + id + " not found."));
 
         return mapper.map(post, PostResponseDTO.class);
@@ -71,7 +86,7 @@ public class PostServiceImpl implements PostService {
         request.setActive(Boolean.TRUE);
         request.setUser(mapper.map(postRequestDTO.getUser(), Users.class));
 
-        Posts newPost = this.repository.save(request);
+        Posts newPost = this.postRepository.save(request);
 
         return mapper.map(newPost, PostDTO.class);
     }
@@ -86,7 +101,7 @@ public class PostServiceImpl implements PostService {
 
         Posts postToPersist;
         if (postPersisted.getUser().getId().equals(postRequestDTO.getUser().getId())) {
-            postToPersist = repository.save(mapper.map(postPersisted, Posts.class));
+            postToPersist = postRepository.save(mapper.map(postPersisted, Posts.class));
         } else {
             throw new RuntimeException("Post não pertence ao usuário");
         }
@@ -100,9 +115,35 @@ public class PostServiceImpl implements PostService {
         PostResponseDTO post = this.findByID(id);
 
         if (post!=null) {
-            this.repository.deleteById(id);
+            this.postRepository.deleteById(id);
         } else {
             throw new NoSuchElementException("Post with ID: " + id + " not found!");
+        }
+    }
+
+    private Long calculeTotalLike(Long postId) {
+//
+//        for (Likes like : likes) {
+//
+//            if (like.getValue() == Value.LIKE) {
+//                numberOfLikes++;
+//            } else if (like.getValue() == Value.DISLIKE) {
+//                numberOfLikes--;
+//            }
+//        }
+        Long totalLike = likeRepository.countByPostIdAndValue(postId, Value.LIKE);
+        Long totalDislike = likeRepository.countByPostIdAndValue(postId, Value.DISLIKE);
+
+        return totalLike - totalDislike;
+    }
+
+    private void verifyDateActive (Posts post) {
+
+        Duration duration = Duration.between(post.getDate(), LocalDateTime.now());
+
+        if (duration.toHours() >= 24) {
+            post.setActive(Boolean.FALSE);
+            postRepository.save(post);
         }
     }
 }
